[package]
name = "cam-finder-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version =  "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
lazy_static = "1.4.0"
colored = "2"
dotenv = "0.15.0"

